--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "10.0.1",
+    "@angular/animations": "10.1.3",
+    "@angular/cdk": "10.1.3",
     "@angular-devkit/build-angular": "0.1002.0",
     "@angular-eslint/builder": "0.4.0-beta.2",
     "@angular-eslint/eslint-plugin": "0.4.0-beta.2",
