--- a/package.json
+++ b/package.json
@@ -81,7 +81,8 @@
     "typescript": "3.9.7",
     "wait-on": "5.0.1",
     "webdriver-manager": "12.1.7",
-    "zone.js": "0.11.1"
+    "zone.js": "0.11.1",
+    "material-design-icons": "3.0.1"
   },
   "engines": {
     "node": ">=10.13.0"
